# MaiBot-SnowLuma-Adapter

./: .gitignore  AGENT.md  CHANGELOG.md  README.md  _manifest.json  main.py  plugin.py  pyproject.toml  qq_face_map.py
snowluma_adapter/: __init__.py  core.py  settings.py
src/: config.py  logger.py
src/api_handler/: api.py
src/connection/: luma_client.py
src/recv_handler/: meta_event_handler.py
src/send_handler/: message_send_handler.py
src/types/: message.py
